@@ -17,7 +17,7 @@
 				<left>1%</left>
 				<top>95</top>
 				<width>82%</width>
-				<height>663</height>
+				<height>662</height>
 				<shadowcolor>black</shadowcolor>
 				<pagecontrol>3000</pagecontrol>
 				<font>font37</font>
