@@ -31,7 +31,7 @@
 					<height>574</height>
 					<aspectratio aligny="top">scale</aspectratio>
 					<fadetime>300</fadetime>
-					<texture background="true">$VAR[MusicInfoThumbVar]</texture>
+					<texture background="true" fallback="DefaultAudio.png">$VAR[MusicInfoThumbVar]</texture>
 				</control>
 			</control>
 			<control type="group">
@@ -128,37 +128,27 @@
 							<visible>String.IsEmpty(ListItem.Art(banner)) + String.IsEmpty(Window(Home).Property(SkinHelper.ListItem.Art.Banner))</visible>
 						</control>
 						<control type="group">
-							<visible>String.IsEmpty(ListItem.Art(fanart))</visible>
-							<control type="image">
-								<left>616</left>
-								<top>30</top>
-								<width>1130</width>
-								<height>260</height>
-								<aspectratio>scale</aspectratio>
-								<texture colordiffuse="AAFFFFFF">colors/black.png</texture>
-							</control>
+							<visible>String.IsEmpty(ListItem.Art(banner)) + String.IsEmpty(Window(Home).Property(SkinHelper.ListItem.Art.Banner))</visible>
 							<control type="textbox">
-								<left>616</left>
+								<left>626</left>
 								<top>30</top>
-								<width>1130</width>
+								<width>1113</width>
 								<height>260</height>
-								<align>center</align>
-								<aligny>center</aligny>
-								<font>font45_title</font>
+								<align>justify</align>
 								<label>$LOCALIZE[19055]</label>
 							</control>
 						</control>
 					</control>
 				</control>
-				<control type="label" id="400">
+				<control type="textbox" id="400">
 					<left>626</left>
 					<top>490</top>
 					<width>1113</width>
-					<height>240</height>
+					<height>250</height>
 					<align>justify</align>
-					<wrapmultiline>true</wrapmultiline>
 					<label>$VAR[MusicInfoTextboxVar]</label>
 					<textcolor>$VAR[SkinColorVar]</textcolor>
+					<autoscroll delay="7000" time="4500" repeat="7000">Skin.HasSetting(AutoScroll)</autoscroll>
 				</control>
 				<control type="panel" id="50">
 					<left>586</left>
@@ -438,7 +428,7 @@
 				<visible>String.IsEqual(ListItem.DBType,artist)</visible>
 				<include content="InfoDialogTopBarInfo">
 					<param name="main_label" value="$INFO[ListItem.Artist]" />
-					<param name="sub_label" value="$INFO[ListItem.Genre]" />
+					<param name="sub_label" value="$VAR[AlbumsCount]" />
 					<param name="id" value="33333" />
 					<param name="subtextcolor" value="$VAR[SkinColorVar]" />
 				</include>
